# ASB

./: AGENTS.md  main_attacker.py  pyproject.toml
aios/llm_core/: llms.py
aios/llm_core/llm_classes/: base_llm.py  gpt_llm.py  hf_native_llm.py  model_registry.py  oai_llm.py  vllm.py
aios/utils/: utils.py
config/: DPI.yml  OPI.yml
logs/: qwen3-32b_debug.csv  qwen3-32b_vllm_naive.csv
logs/direct_prompt_injection/gemma2:9b/no_memory/: naive-all_.csv
logs/qwen3-32b_debug_messages/: 00001_financial_analyst_agent_TransactionDuplication_Evaluate_the_risk_and_potential_returns_of_investing_in_a_ne.json
memory_db/chroma_db/: chroma.sqlite3
pyairports/: __init__.py  airports.py
pyopenagi/agents/: agent_factory.py  base_agent.py  interact.py  react_agent.py  react_agent_attack.py
pyopenagi/utils/: chat_template.py
scripts/: agent_attack.py  agent_attack_pot.py  run.sh
